# pytest-line-runner

./: .copier-answers.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml
pytest_line_runner/: __init__.py  resolver.py
tests/: test_import.py  test_line_runner.py
