[project]
name = "pytest-line-runner"
version = "0.1.0"
description = "Run pytest tests by line number instead of exact test name"
keywords = ["pytest", "testing", "line-number", "plugin"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/pytest-line-runner" }

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.entry-points.pytest11]
line-runner = "pytest_line_runner"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pyright[nodejs]>=1.1.380",
    "ruff>=0.8.0",
    "coverage>=7.0.0",
    "pytest-cov>=4.0.0",
    "covdefaults>=2.3.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=html:tmp/htmlcov -p no:pytest_line_runner"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["pytest_line_runner"]

[tool.coverage.report]
fail_under = 50

[tool.ruff]
extend-exclude = ["playground.py", "playground/"]
